syntax = "proto3";  
option csharp_namespace = "SerializationDataLib.Protobuf";  

// Compile: protoc --proto_path=C:\Users\danie\source\repos\SerializationStressTest\SerializationDataLib\Data\Protos\ --csharp_out=C:\Users\danie\source\repos\SerializationStressTest\SerializationDataLib\Data\Protos\out ProtoIntList.proto

message ProtoIntList  
{  
	repeated int32 intList = 1;
}